// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders <Link /> tag correctly when is link with route 1`] = `
<Link
  className=""
  id={null}
  onClick={[Function]}
  replace={false}
  role={null}
  title=""
  to="/"
>
  <span
    className=""
  >
    Continue
  </span>
</Link>
`;

exports[`<Button /> renders <Loader /> correctly when isLoading 1`] = `
<button
  className="is-loading"
  disabled={false}
  id={null}
  onClick={[Function]}
  role={null}
  title=""
  type="Submit"
>
  <div>
    <Loader
      className=""
      label=""
      type="circle"
    />
    <span
      className=" u-hiddenVisually"
    >
      Continue
    </span>
  </div>
</button>
`;

exports[`<Button /> renders <a> tag correctly when is link 1`] = `
<a
  className=""
  href="/"
  id={null}
  onClick={[Function]}
  rel="noopener noreferrer"
  role={null}
  target=""
  title=""
>
  <span
    className=""
  >
    Continue
  </span>
</a>
`;

exports[`<Button /> renders correctly 1`] = `
<button
  className=""
  disabled={false}
  id={null}
  onClick={[Function]}
  role={null}
  title=""
  type="Submit"
>
  <span
    className=""
  >
    Continue
  </span>
</button>
`;

exports[`<Button /> renders correctly when disabled 1`] = `
<button
  className=""
  disabled={true}
  id={null}
  onClick={[Function]}
  role={null}
  title=""
  type="Submit"
>
  <span
    className=""
  >
    Continue
  </span>
</button>
`;
